Prepare for deploy
 * Move the LUT generator to subpage and create basic placeholder landing page on main page
 * Plausible and sentry

--- a/src/app.html
+++ b/src/app.html
@@ -12,6 +12,12 @@
       href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap"
       rel="stylesheet"
     />
+    <script
+      async
+      defer
+      data-domain="texture-utils.ameo.design"
+      src="https://pause.ameo.dev/js/plausible.js"
+    ></script>
 
     <style type="text/css">
       :root {
